[package]
name = "mini-system-monitor"
version = "0.1.9"
edition = "2021"

[dependencies]
eframe = { version = "0.35.0", features = ["persistence"] }
sysinfo = "0.38.0"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
# 2026-07-03: 共有ライブラリの参照追加
common_lib = { path = "../common_lib", features = ["windows_desktop"] }

[profile.release]
opt-level = 'z'     # サイズ最適化
lto = true          # リンク時最適化
codegen-units = 1   # コンパイル単位を1にして最適化を最大化
panic = 'abort'     # パニック時の巻き戻しを無効化して軽量化
strip = true        # シンボル情報を削除（サイズ大幅削減）

